docs: add missing passages, remove all TODOs

--- a/packages/tools/docusaurus/docs/concepts/index.mdx
+++ b/packages/tools/docusaurus/docs/concepts/index.mdx
@@ -7,23 +7,4 @@ import { Columns } from '@bedrock-layout/primitives';
 
 # Concepts
 
-TODO describe this as coming soon... possibly at outlook at possible pages and integrate with Zendesk voting feature
-
-<div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt={768}>
-    <TeaserBox
-      topic="TODO: Guides Nav"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
-      link={{
-        href: '#',
-        label: 'Go to Token',
-        variant: 'clear',
-        size: 'small',
-        iconAnimation: true,
-        iconAfter: {
-          icon: 'chevron-right',
-        },
-      }}
-    />
-  </Columns>
-</div>
+We'll add content to this section soon, in the meantime: let us know what you'd like to read about!
