--- a/packages/tools/docusaurus/docs/guides/components/recipe.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/recipe.mdx
@@ -4,4 +4,4 @@ sidebar_position: 4
 
 # Add a Recipe
 
-TODO add content
+This will follow shorty, please come back soon. It's part of ["4. Components"](../create/components.mdx) of the main ["Create your Design System" guide](../create/index.mdx). Please come back soon!
