--- a/packages/tools/docusaurus/docs/guides/create/publish.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/publish.mdx
@@ -6,4 +6,4 @@ import Admonition from 'react-admonitions';
 
 # 5. Publish your Design System
 
-TODO describe that this guide will be coming soon, add email notification feature here
+We're currently in the process of writing this part! Please come back later, it shouldn't take long!
