--- a/packages/tools/docusaurus/docs/guides/create/start.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/start.mdx
@@ -214,7 +214,7 @@ Next we'll add the `kickstartDS` dependencies themselves. We start out by adding
 yarn add @kickstartds/base@2.0.0-canary.922.4908.0
 ```
 
-Learn more about the different modules **kickstartDS** has to offer in our [overview here](#). TODO link to overview of modules here
+Learn more about the different modules **kickstartDS** has to offer in our [overview here](../../foundations/modules.md).
 
 </CH.Scrollycoding>
 
@@ -260,9 +260,3 @@ node_modules
 
 We'll continue by applying our branding to **kickstartDS**, which will result in a bunch of token files (`JSON`) being added to the project.<br/>
 This will also give us the opportunity to set up **Storybook**, and get a first visual representation of our Design System in the browser!
-
-TODO add Commit reminder
-
-## Code Sandbox
-
-TODO add Code Sandbox with result of step
