--- a/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
@@ -27,8 +27,6 @@ This is how the result of this guide will look like:
   height="530"
 ></iframe>
 
-TODO add `iframe` to real example
-
 It will only need three simple steps for that:
 
 1. Component Definition,
@@ -345,8 +343,6 @@ We'll work our way up to this **JSON Schema** definition.
 #### Start with just the boilerplate for a component definition
 
 This includes all necessarily required values for a valid component definition in **kickstartDS**.
-
-To learn more about our use of `JSON Schema`, read our Concepts (TODO create + link) article.
 
 <CH.Code>
 ```json src/components/teaser-card/teaser-card.schema.json
@@ -734,8 +730,6 @@ This concludes creating the `JSON Schema`. When running the schema generation in
 </CH.Code>
 
 How your schema generation is started might change depending on your setup. If you've followed our ["Create your Design System" guide](../../create/index.mdx) before, or want to add it like we do, follow [this section of it](../../create/components.mdx) closely.
-
-TODO: fix markdown formatting of generated `.ts`-file above
 
 ### **React** template
 
@@ -1182,14 +1176,4 @@ If you're using **Storybook**, you can follow this part of the example to get al
   configuration to your use accordingly, when following this part!
 </Admonition>
 
-TODO actually add guide
-
-## Completed component
-
-Play around with your new component directly in a `Code Sandbox` below:<br/>
-
-TODO actually add Code Sandbox
-
-## Technical debt
-
-TODO describe technical debt
+This part of the guide will follow soon! Please come back soon, or hit us up for an update!
