--- a/packages/tools/docusaurus/docs/guides/index.mdx
+++ b/packages/tools/docusaurus/docs/guides/index.mdx
@@ -9,8 +9,6 @@ import { Columns } from '@bedrock-layout/primitives';
 
 Guides provide instructions on how to get the most out of kickstartDS to create your own Design System. Let us know which guide you are actually missing.
 
-TODO: add zendesk
-
 <div ks-theme="docs">
   <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
@@ -71,7 +69,7 @@ TODO: add zendesk
     />
     <TeaserBox
       topic="Using our starter"
-      text="TODO: add short intro description about the starters"
+      text="Our starter helps create your Design System in just minutes!"
       link={{
         href: './use-our-starter/',
         label: 'See starters',
