--- a/packages/tools/docusaurus/docs/integration/index.mdx
+++ b/packages/tools/docusaurus/docs/integration/index.mdx
@@ -12,8 +12,7 @@ import { Button } from '@kickstartds/base/lib/button';
 
 <div ks-theme="docs">
 
-TODO: Foundations are the visual elements needed to create your Design System
-and its engaging user experiences. You can build up your."
+Integration well with **Storybook** means giving all the users of your Design System the best experience possible. It should be the perfect workbench, welcoming every type of stakeholder!
 
 <Button
   size="small"
@@ -30,10 +29,10 @@ and its engaging user experiences. You can build up your."
   <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="JSON Schema"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="Integrate your component API directly into **Storybook**"
       link={{
         href: './storybook/schema',
-        label: 'TODO',
+        label: 'Schema',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
@@ -44,10 +43,10 @@ and its engaging user experiences. You can build up your."
     />
     <TeaserBox
       topic="Design & Component Token"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="Integrate, view and document token in **Storybook**."
       link={{
         href: './storybook/token',
-        label: 'TODOReact',
+        label: 'Token',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
@@ -58,10 +57,10 @@ and its engaging user experiences. You can build up your."
     />
     <TeaserBox
       topic="Generated Controls"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="Get generated Controls for **Storybook** for free, with enhanced documentation included."
       link={{
         href: './storybook/controls',
-        label: 'TODO',
+        label: 'Controls',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
@@ -72,10 +71,10 @@ and its engaging user experiences. You can build up your."
     />
     <TeaserBox
       topic="Premade Stories"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="Re-use stories already created, to get your docs up and running even faster"
       link={{
         href: './storybook/stories',
-        label: 'TODO',
+        label: 'Stories',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
@@ -86,10 +85,10 @@ and its engaging user experiences. You can build up your."
     />
     <TeaserBox
       topic="Theming"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="Add some flavour to the way your **Storybook** looks!"
       link={{
         href: './storybook/theming',
-        label: 'TODO',
+        label: 'Theming',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
@@ -105,8 +104,7 @@ and its engaging user experiences. You can build up your."
 
 <div ks-theme="docs">
 
-TODO: Foundations are the visual elements needed to create your Design System
-and its engaging user experiences. You can build up your."
+**React** as our templating language of choice offers great integration capabilities, and we've build some on top of those... to help you even more when creating your own components.
 
 <Button
   size="small"
@@ -122,10 +120,10 @@ and its engaging user experiences. You can build up your."
   <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="Image Rendering"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="How to replace images in your **Gatsby** or **Next.js** project."
       link={{
         href: './react/image-rendering',
-        label: 'TODO',
+        label: 'Images',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
@@ -136,10 +134,10 @@ and its engaging user experiences. You can build up your."
     />
     <TeaserBox
       topic="Rich Text Rendering"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="How to replace rendered text with a custom RTE implementation, e.g. **Sanity**s `PortableText`"
       link={{
         href: './storybook/rich-text-rendering',
-        label: 'TODO',
+        label: 'Rich Text',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
@@ -153,8 +151,7 @@ and its engaging user experiences. You can build up your."
 
 ## Frameworks
 
-TODO: Foundations are the visual elements needed to create your Design System
-and its engaging user experiences. You can build up your."
+Integration with common **React** frameworks can really speed up adoption, and make the difference between a successful Design System... and one that fails!
 
 <Button
   size="small"
@@ -172,10 +169,10 @@ and its engaging user experiences. You can build up your."
   <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="Gatsby"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="How we can help with **Gatsby** through our own theme, specific to **kickstartDS** and its components."
       link={{
         href: './frameworks/gatsby',
-        label: 'TODO',
+        label: 'Theme',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
@@ -186,10 +183,10 @@ and its engaging user experiences. You can build up your."
     />
     <TeaserBox
       topic="Next.js"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="Helper and tipps to aid you in creating an app or interface based on **Next.js** with **kickstartDS**."
       link={{
         href: './frameworks/nextjs',
-        label: 'TODO',
+        label: 'Helper',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
