--- a/packages/tools/docusaurus/docs/integration/storybook/stories.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/stories.mdx
@@ -142,9 +142,9 @@ This also works when working with more than one component:
 
 #### Complex example **Glossary** detail page
 
-TODO describe Recipe / Page usage and consumption of multiple Stories for easier / faster prototyping
+This will be added soon, come back a bit later!
 
-Use this one: https://github.com/kickstartDS/kickstartDS-storybook/blob/master/src/Pages/BlogList.story.jsx
+Woöö ise this page as a basis: https://github.com/kickstartDS/kickstartDS-storybook/blob/master/src/Pages/BlogList.story.jsx
 
 #### In action
 
