--- a/packages/tools/docusaurus/docs/integration/storybook/theming.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/theming.mdx
@@ -10,7 +10,7 @@ To learn more about theming in **Storybook**, have a look at [their dedicated do
 
 ## Usage with **kickstartDS**
 
-You already have a well established **Design Token** set when working with a Design System based on **kickstartDS**. In our mission to always provide sensible defaults, that improve your status quo without a big upfront investment of time, we provide a transformer in our **Style Dictionary** implementation (it's the tool backing your **Design Token** set, [learn more](#) TODO add link). That transformer takes your **Design Token** set and converts it to **JavaScript** values that can be imported in **Storybooks** theme file (`.storybook/themes.js`).
+You already have a well established **Design Token** set when working with a Design System based on **kickstartDS**. In our mission to always provide sensible defaults, that improve your status quo without a big upfront investment of time, we provide a transformer in our **Style Dictionary** implementation (it's the tool backing your **Design Token** set). That transformer takes your **Design Token** set and converts it to **JavaScript** values that can be imported in **Storybooks** theme file (`.storybook/themes.js`).
 
 As this is a generated file, based on your configuration, it's content will vary, but it should a little like this:
 
