--- a/packages/tools/docusaurus/docs/intro/index.mdx
+++ b/packages/tools/docusaurus/docs/intro/index.mdx
@@ -27,7 +27,7 @@ Many thanks to [Amplifyn](https://www.amplifyn.com) for allowing us to use their
 
 ## Get started
 
-Get started building your own Design System by installing **kickstartDS** into your project, or by following our [Create your first Design System](https://todo) tutorial, to learn about the main concepts involved.
+Get started building your own Design System by installing **kickstartDS** into your project, or by following our [Create your first Design System](../guides/create/index.mdx)guide, to learn about the main concepts involved.
 
 <div ks-theme="docs">
   <Columns columns={3} gutter="md" switchAt={672}>
@@ -63,14 +63,14 @@ Get started building your own Design System by installing **kickstartDS** into y
       link={{
         size: 'small',
         href: '/blog/',
-        label: 'TODO: Concepts',
+        label: 'Read Blog',
         variant: 'clear',
         iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
       }}
-      text="TODO: Take a look behind the scenes, and learn about the conceps and ideas making up **kickstartDS**"
+      text="Take a look behind the scenes, and learn about the conceps and ideas making up **kickstartDS**"
       topic="How It Works"
     />
 
@@ -81,13 +81,13 @@ Get started building your own Design System by installing **kickstartDS** into y
 
 **kickstartDS** focuses on the consistent frontend UX and UI interaction of components — colors, layout, interactions, animations. It's easy to adapt, and integrates with every frontend-approach that works with regular HTML.
 
-Additionally, under the hood, React is used as the templating layer of choice (TODO: read more about why, and what this means here), but integration into your templating layer, or backend, of choice is in no way limited by this, as everything is written to be usable without a React runtime! Only development of new components involves, and benefits by, the use of React!
+Additionally, under the hood, **React** is used as the templating layer of choice, but integration into your templating layer, or backend, of choice is in no way limited by this, as everything is written to be usable without a React runtime! Only development of new components involves, and benefits by, the use of React!
 
 ### Framework-agnostic
 
 Every kickstartDS component consists of semantic HTML(5), CSS Modules & Properties and JavaScript (ES6). This makes it easy to implement across any framework or even stand alone.
 
-Alternatively, use our ready-to-use React components directly in your codebase!
+Alternatively, use our ready-to-use **React** components directly in your codebase!
 
 ### Quality UX
 
@@ -212,7 +212,7 @@ Feel free to [join us on Discord](https://discord.gg/mwKzD5gejY)!
 
 If that's not your cup of tea, you can also reach out to us:
 
-- Through the [chat widget](https://todo), included in all of our public facing websites (TODO add link that opens Zendesk Widget)
+- Through the chat widget, included in all of our public facing websites
 - By [writing us an email](mailto:hello@kickstartds.com)
 - By [joining us on Twitter](https://twitter.com/intent/follow?screen_name=kickstartDS)
 - By [writing us on WhatsApp](https://wa.me/491752131879?text=Hi!%20I%20am%20interested%20to%20know%20more%20about%20kickstartDS.)
