--- a/packages/tools/docusaurus/docs/guides/components/create.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/create.mdx
@@ -2,6 +2,9 @@
 sidebar_position: 2
 ---
 
+import { Section } from '@kickstartds/base/lib/section';
+import { Storytelling } from '@kickstartds/content/lib/storytelling';
+import myImageUrl from '../../../static/img/content-module.png';
 import Admonition from 'react-admonitions';
 
 # Create a component
@@ -40,8 +43,6 @@ There are three main steps in creating a component:
 2. Component mapping, and
 3. Component creation
 
-TODO should / could possibly include "Component documentation" as a fourth step, where the **Storybook** story is added
-
 So the main way this differs from [adapting a component](./adapt.mdx) is in adding "Component Mapping", in between "Component definition" and "Component creation". This is where we'll try to match our [component API](../../foundations/components/component-api.md) to existing components.
 
 We'll also slightly deviate from it when defining our structure, as we can't just reduce an existing set of component properties here.
@@ -61,15 +62,50 @@ Like the adaptation process we start by defining a [component API](../../foundat
 
 We'll use the `TeaserCard` component throughout this guide to illustrate concepts. This will not be an exhaustive example, though. For that have a look at our guide ["Create `TeaserCard` component"](../examples/components/teaser-card.mdx). We also have an additional example in ["Create `Interstitial` component"](../examples/components/interstitial.mdx), but to actually implement that you need access to our **kickstartDS** content module. But following the thought process behind it can provide values nontheless.
 
-TODO add content module CTA here
+<Section
+  ks-theme="docs"
+  spaceBefore="none"
+  spaceAfter="none"
+  width="full"
+  inverted="true"
+  mode="list"
+>
+  <Storytelling
+    backgroundImage={myImageUrl}
+    box={{
+      hAlign: 'left',
+      headline: {
+        align: null,
+        content: 'kickstartDS Content Module',
+        level: 'h2',
+        pageHeader: false,
+        spaceAfter: 'none',
+        styleAs: 'h1',
+        subheadline: 'The perfect addition to our Open Source base',
+      },
+      link: {
+        fillAnimation: false,
+        href: '#',
+        iconAfter: false,
+        iconAnimation: false,
+        iconBefore: false,
+        label: 'Interested? Contact us!',
+        newTab: false,
+        size: 'small',
+        variant: 'solid',
+      },
+      text: 'The **Content Module** includes seven rich components: Hero visual, Quote, Storytelling etc. — everything you need to build beautiful content experiences or to enrich your existing Design System',
+      textAlign: 'left',
+      vAlign: 'center',
+    }}
+  />
+</Section>
 
 #### Purpose
 
 When thinking about a component that should be part of your Design System, you should already have a strong sense of what that component should be, and what it should accomplish for you. If that's not the case, it probably isn't stable enough yet to be part of a Design System that should find wider adoption. You should probably take a step back first, and maybe start a [Design System Initiative](../design-system-initiative.md) to narrow down on what components you'll really need.
 
 With that in mind, let's assume that the purpose of our component (the `TeaserCard`) is to tease content. It should look like a card while doing that, and have the obvious features one would assume a card based component to have. Like a cover image, a link, a headline and some text... with some of those potentially being optional. And because our Design System has an [invert feature](#), it should also be invertible.
-
-TODO describe invert feature somewhere, link it above
 
 #### Structure
 
@@ -906,10 +942,8 @@ There may be other components you've built, that themselves use the base `Button
 
 As a means to not having to go through every combination of those component now, making sure our `Button` actually gets used, you can just change the default `Button` rendered by adding a single `Provider` once, instead.
 
-Learn more about `Providers` and **React Context** in [our dedicated page about them](#). TODO add link.<br />
+Learn more about `Providers` and **React Context** in our dedicated page about them.<br />
 Or look at our ["Create your Design System" guide](../../guides/create/components.mdx), where we add the general setup for `Providers`. That one also includes some more details on this!
-
-TODO check `TeaserBoxProvider` usage here, probably not useful? If useful... describe why here! also fix text above which still is copy &amp; pasted directly from "Adapt a component"
 
 <Admonition type="tip" title="Visual Studio Code component property quick-fix">
 Visual Studio Code has a great feature aiding in this workflow, with **React** components that include **TypeScript** types... like **kickstartDS** components do. When adding a "bare" component without props to your template, Visual Studio Code will offer you the option to `Add missing attributes`.
@@ -917,8 +951,6 @@ Visual Studio Code has a great feature aiding in this workflow, with **React** c
 This will automatically create all required options for your component. Now you just have to connect your own props to those, while hard-coding the ones you don't plan on exposing as part of your components [component API](../../foundations/components/component-api.md).
 
 Just hover the squiggly, red line that should be decorating your component, and choose `Quick Fix...`, to get to that option (alternatively put your cursor on the component tag and hit `Ctrl+.`).
-
-TODO add short animation of this workflow
 </Admonition>
 
 ## Technical debt added
@@ -937,7 +969,7 @@ You're immune to underlying changes to:
 
 In the case of a changed [component API](../../foundations/components/component-api.md), you should have a look at the corresponding `CHANGELOG.md` and potential notes in our matching [migration guide](../migrations/index.md). You'll probably just need to add a newly added field to your **React** template, and potentially your own [component API](../../foundations/components/component-api.md) if you want to use it. If a field was changed, that might also necessitate some adaption of your own version. Finally a removed field you're actually using would mean adding additional customization to regain that functionality. Have a look at our [`Headline` example guide](../examples/components/headline.mdx) to see how you'd add your own, new property!
 
-Learn more about what we mean by technical debt here on the [overview page of this section](#) TODO link to technical debt section on parent page.
+Learn more about what we mean by technical debt here on the overview page of this section.
 
 ## Examples
 
@@ -947,7 +979,7 @@ We continuously expand our [component example guides](../examples/components/ind
 
 In [this example component guide](../examples/components/teaser-card.mdx) we create the `TeaserCard` component, mapped to the `TeaserBox` component (part of the `@kickstartDS/base` module), to tease content in our Design System. We greatly simplify the `Button` to a single `string` props, and drastically reduce the rest of the options used, and offered, in our own adaptation of the `TeaserBox`.
 
-This is what the result looks like (TODO replace with preview from real Storybook, not ours):
+This is what the result looks like:
 
 <iframe
   src="https://60dc476b80673e003b4258d6-czyzkgbgek.chromatic.com/iframe.html?args=&id=base-teaser-box--linked-without-button&viewMode=story"
@@ -959,7 +991,7 @@ This is what the result looks like (TODO replace with preview from real Storyboo
 
 In [this example component guide](../examples/components/teaser-card.mdx) we create the `Interstitial` component, mapped to the `Storytelling` component (part of the `@kickstartDS/content` module), to add interstitial content elements that break the flow of content for really emphasized call-to-actions. As with all examples, we reduce the set of options greatly.
 
-This is what the result looks like (TODO replace with preview from real Storybook, not ours):
+This is what the result looks like:
 
 <iframe
   src="https://60dc476b80673e003b4258d6-czyzkgbgek.chromatic.com/iframe.html?args=&id=content-storytelling--background-image&viewMode=story"
